--- a/package.json
+++ b/package.json
@@ -20,41 +20,42 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "6.0.3",
-    "@angular/cdk": "^6.1.0",
-    "@angular/common": "6.0.3",
-    "@angular/compiler": "6.0.3",
-    "@angular/core": "6.0.3",
-    "@angular/forms": "6.0.3",
-    "@angular/http": "6.0.3",
-    "@angular/material": "^6.1.0",
-    "@angular/platform-browser": "6.0.3",
-    "@angular/platform-browser-dynamic": "6.0.3",
-    "@angular/router": "6.0.3",
-    "core-js": "^2.4.1",
+    "@angular/animations": "6.1.0",
+    "@angular/cdk": "^6.4.2",
+    "@angular/common": "6.1.0",
+    "@angular/compiler": "6.1.0",
+    "@angular/core": "6.1.0",
+    "@angular/forms": "6.1.0",
+    "@angular/http": "6.1.0",
+    "@angular/material": "^6.4.2",
+    "@angular/platform-browser": "6.1.0",
+    "@angular/platform-browser-dynamic": "6.1.0",
+    "@angular/router": "6.1.0",
+    "core-js": "^2.5.7",
+    "karma-jasmine-html-reporter": "^1.2.0",
     "ngmakelib": "^0.2.5",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.1.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "6.0.5",
-    "@angular/compiler-cli": "6.0.3",
-    "@angular/language-service": "6.0.3",
+    "@angular/cli": "6.1.1",
+    "@angular/compiler-cli": "6.1.0",
+    "@angular/language-service": "6.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "protractor": "~5.1.2",
+    "karma-jasmine": "~1.1.2",
+    "protractor": "~5.4.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.7.2"
+    "typescript": "^2.9.2"
   }
 }
