--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "6.1.0",
+    "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.4.2",
-    "@angular/common": "6.1.0",
-    "@angular/compiler": "6.1.0",
-    "@angular/core": "6.1.0",
-    "@angular/forms": "6.1.0",
-    "@angular/http": "6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.2",
-    "@angular/platform-browser": "6.1.0",
-    "@angular/platform-browser-dynamic": "6.1.0",
-    "@angular/router": "6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
     "core-js": "^2.5.7",
     "karma-jasmine-html-reporter": "^1.2.0",
     "ngmakelib": "^0.2.5",
@@ -39,10 +39,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "6.1.1",
-    "@angular/compiler-cli": "6.1.0",
-    "@angular/language-service": "6.1.0",
+    "@angular-devkit/build-angular": "^0.6.0",
+    "@angular/cli": "^6.1.1",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
