--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-filebrowser",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "license": "MIT",
   "description": "Angular filebrowser backed by git repository in the browser",
   "homepage": "https://github.com/fintechneo/angular-git-filebrowser",
@@ -16,7 +16,8 @@
     "e2e": "ng e2e",
     "lib": "node ngmakelib-conf.js",
     "libwatch": "node ngmakelib-conf.js --watch",
-    "publishlib": "cd .ngmakelibtmp/dist && npm publish"
+    "publishlib": "cd .ngmakelibtmp/dist && npm publish",
+    "webdriver-update-ci": "webdriver-manager update --standalone false --gecko false --versions.chrome 2.37"
   },
   "private": false,
   "dependencies": {
