--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-filebrowser",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "license": "MIT",
   "description": "Angular filebrowser backed by git repository in the browser",
   "homepage": "https://github.com/fintechneo/angular-git-filebrowser",
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "^7.1.3",
     "@angular/platform-browser-dynamic": "^7.1.3",
     "@angular/router": "^7.1.3",
+    "deep-diff": "^1.0.2",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.2.2",
     "tsickle": "^0.34.0",
