--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "start-local-git-server": "tsc -p e2e/tsconfig.e2e.json && node out-tsc/e2e/localgitserver/localgitserver.main.js",
+    "start-local-git": "ng serve --proxy-config proxy.conf.localgit.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -45,6 +47,7 @@
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.0",
+    "cgi": "^0.3.1",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^3.1.1",
@@ -52,11 +55,11 @@
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
+    "ngmakelib": "^0.2.5",
     "ngx-i18nsupport": "^0.16.2",
     "protractor": "^5.4.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "3.2.4",
-    "ngmakelib": "^0.2.5"
+    "typescript": "3.2.4"
   }
 }
